# python-project-49

./: .gitignore  Makefile  README.md  calc.cast  gcd.cast  prime.cast  progr.cast  project1.cast  pyproject.toml  setup.cfg
brain_games/: cli.py  constants.py  number.py  runner.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
